--- a/fit4kids/app/Resources/views/basket/show.html.twig
+++ b/fit4kids/app/Resources/views/basket/show.html.twig
@@ -1,1 +1,23 @@
-{# empty Twig template #}
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <h1>Your Basket</h1>
+    <hr>
+    {%for course in courses%}
+    <ul>
+        <li>
+            Id: {{course.id}}
+        </li>
+        <li>
+            Title: {{course.title}}
+        </li>
+        <li>
+            Description: {{course.title}}
+        </li>
+        <li>
+            Price: {{course.price}} <a href="/basket/pay">Pay</a>
+        </li>
+    </ul>
+    <hr>
+    {%endfor%}
+{% endblock %}
