added pay action to course controller, updated basket view

--- a/fit4kids/app/Resources/views/basket/show.html.twig
+++ b/fit4kids/app/Resources/views/basket/show.html.twig
@@ -15,7 +15,7 @@
             Description: {{course.title}}
         </li>
         <li>
-            Price: {{course.price}} <a href="/basket/pay">Pay</a>
+            Price: {{course.price}} <a href="/course/{{course.id}}/pay">Pay</a>
         </li>
     </ul>
     <hr>
