--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -56,7 +56,7 @@
                                                     <input type="password" class="form-control"
                                                            id="exampleInputPassword2" placeholder="Hasło" required>
                                                     <div class="help-block text-right"><a href="">Zapomniałeś hasła?
-                                                            </a></div>
+                                                        </a></div>
                                                 </div>
                                                 <div class="form-group">
                                                     <button type="submit" class="btn btn-primary btn-block">Zaloguj się
@@ -88,5 +88,13 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
 {% block javascripts %}{% endblock %}
+<footer class="container-fluid text-center bg-lightgray">
+
+    <div class="copyrights" style="margin-top:25px;">
+        <p>Nazwa firmy © 2017, All Rights Reserved
+            <br>
+            <span>Web Design By: Kajetan Szafran, Nastazja Mikloss, Paweł Krakowiak</span></p>
+    </div>
+</footer>
 </body>
 </html>
