--- a/fit4kids/web/css/styleBase.css
+++ b/fit4kids/web/css/styleBase.css
@@ -1,4 +1,21 @@
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
 .blockBody {
     margin-left: 30px;
     margin-right: 30px;
+}
+
+.bg-lightgray
+{
+    background-color:LightGray;
+}
+
+footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
 }
