--- a/fit4kids/app/Resources/FOSUserBundle/views/Registration/check_email.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Registration/check_email.html.twig
@@ -1,7 +1,7 @@
-{% extends "@FOSUser/layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
+{% extends 'base.html.twig' %}
 
-{% block fos_user_content %}
+{% block body %}
     <p>{{ 'registration.check_email'|trans({'%email%': user.email}) }}</p>
-{% endblock fos_user_content %}
+{% endblock %}
