--- a/fit4kids/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -3,11 +3,21 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6">
+                {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+                {{ form_widget(form) }}
+                    <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-success"/>
+            </div>
+            <div class="col-md-3">
+            </div>
+        </div>
     </div>
-{{ form_end(form) }}
+    <div>
+    </div>
+    {{ form_end(form) }}
 
 {% endblock %}
