--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -42,33 +42,9 @@
                                     <li>
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <form class="form" role="form" method="post" action="login"
-                                                      accept-charset="UTF-8" id="login-nav">
-                                                    <div class="form-group">
-                                                        <label class="sr-only" for="exampleInputEmail2">Nazwa
-                                                            użytkownika:</label>
-                                                        <input type="email" class="form-control" id="exampleInputEmail2"
-                                                               placeholder="Nazwa użytkownika" required>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label class="sr-only"
-                                                               for="exampleInputPassword2">Hasło:</label>
-                                                        <input type="password" class="form-control"
-                                                               id="exampleInputPassword2" placeholder="Hasło" required>
-                                                        <div class="help-block text-right"><a href="">Zapomniałeś hasła?
-                                                            </a></div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <button type="submit" class="btn btn-primary btn-block">Zaloguj
-                                                            się
-                                                        </button>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox"> zapamiętaj mnie
-                                                        </label>
-                                                    </div>
-                                                </form>
+                                                {{ render(controller(
+                                                    'FOSUserBundle:Security:login'
+                                                )) }}
                                             </div>
                                             <div class="bottom text-center">
                                                 Nie masz jeszcze konta? <a href="/register"><b>Zarejestruj się</b></a>
@@ -79,7 +55,7 @@
                             </li>
                         {% endif %}
                         {% if app.user %}
-                            <li><a href="#">Twoje konto</a></li>
+                            <li><a href="/profile">Twoje konto</a></li>
                             <li><a href="/logout">Wyloguj się</a></li>
                         {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
