--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -6,10 +6,9 @@
 
     <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ asset('css/styleBase.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
-
     {% block stylesheets %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    {% block head %}{% endblock %}
 </head>
 <body>
 <div class="navbar">
