--- a/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -26,7 +26,9 @@
                 )) }}
             </div>
             <div id="menu2" class="tab-pane fade">
-                <p>tutaj będzie koszyk</p>
+                {{ render(controller(
+                'AppBundle:Basket:show'
+                )) }}
             </div>
         </div>
     </div>
