--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -27,7 +27,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Kursy</a></li>
+                        <li><a href="/course/">Kursy</a></li>
                     </ul>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
