--- a/fit4kids/src/AppBundle/Resources/views/Admin/basic_form.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/basic_form.html.twig
@@ -1,6 +1,6 @@
-{% extends "::base.html.twig" %}
 
-{% block title %}AppBundle:Admin:showAddCarouselForm{% endblock %}
+
+{% block title %}{% endblock %}
 
 {% block body %}
     {{ form_start(form) }}
