--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_carousel.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_carousel.html.twig
@@ -1,10 +1,8 @@
-{% extends "::base.html.twig" %}
 
-{% block title %}AppBundle:Admin:showAdminCarousel{% endblock %}
 
 {% block body %}
     <a class="btn btn-success" href="/admin/carousel/add">Dodaj nowy element slidera</a>
-    <table>
+    <table class="table-bordered table-hover text-center">
         <tr>
             <th>
                 Nazwa
@@ -24,10 +22,10 @@
                     {{carousel.name}}
                 </td>
                 <td>
-                    {{carousel.picture}}
+                    <img src="{{ asset(carousel.picture) }}" alt="image" height="150" width="200">
                 </td>
                 <td>
-                    {{carousel.course.id}}
+                    {{carousel.course.title}}
                 </td>
                 <td>
                     <a class="btn btn-primary" href="/admin/carousel/edit/{{carousel.id}}/">Edytuj</a>
@@ -35,4 +33,5 @@
                 </td>
             </tr>
         {%endfor%}
-    {% endblock %}
+    </table>
+{% endblock %}
