poprawki w baskecie i kursie

--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -26,12 +26,10 @@
                     <a class="navbar-brand" href="/">Nazwa firmy</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/course/">Kursy</a></li>
-                    </ul>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/course/">Kursy</a></li>
                         {% if not app.user %}
                             <li><p class="navbar-text">Masz już konto?</p></li>
                             <li class="dropdown">
@@ -77,7 +75,7 @@
     <div class="copyrights" style="margin-top:25px;">
         <p>Nazwa firmy © 2017, All Rights Reserved
             <br>
-            <span>Web Design By: Kajetan Szafran, Nastazja Mikloss, Paweł Krakowiak</span></p>
+            <span>Web Design By: Kajetan Szafran, Nastassja Miklos, Paweł Krakowiak</span></p>
     </div>
 </footer>
 </body>
