--- a/fit4kids/app/Resources/views/course/show.html.twig
+++ b/fit4kids/app/Resources/views/course/show.html.twig
@@ -1,44 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Course</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8">
+                <h3>Course</h3>
+                <table class="table table-bordered">
+                    <tbody>
+                    <tr>
+                        <th>Title</th>
+                        <td>{{ course.title }}</td>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>{{ course.description }}</td>
+                    </tr>
+                    <tr>
+                        <th>Price</th>
+                        <td>{{ course.price }}</td>
+                    </tr>
+                    <tr>
+                        <th>Likes</th>
+                        <td>{{ course.likes }}</td>
+                    </tr>
+                    </tbody>
+                </table>
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ course.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ course.title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ course.description }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ course.price }}</td>
-            </tr>
-            <tr>
-                <th>Likes</th>
-                <td>{{ course.likes }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('course_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('course_edit', { 'id': course.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+                <ul>
+                    <li><a href="{{ path('course_index') }}">Back to the list</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+            </div>
+        </div>
+    </div>
 {% endblock %}
