--- a/fit4kids/app/Resources/views/course/index.html.twig
+++ b/fit4kids/app/Resources/views/course/index.html.twig
@@ -1,44 +1,45 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-8">
-                <h1>Courses list</h1>
+    <h1>Courses list</h1>
 
-                <table class="table table-bordered">
-                    <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Price</th>
-                        <th>Likes</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for course in courses %}
-                        <tr>
-                            <td>{{ course.title }}</td>
-                            <td>{{ course.description }}</td>
-                            <td>{{ course.price }}</td>
-                            <td>{{ course.likes }}</td>
-                            <td>
-                                <ul>
-                                    <li><a href="{{ path('course_show', { 'id': course.id }) }}">show</a></li>
-                                    <li><a href="addToBasket/{{ course.id }}">Dodaj do koszyka</a></li>
-                                </ul>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-2">
-            </div>
-        </div>
-    </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Likes</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for course in courses %}
+            <tr>
+                <td><a href="{{ path('course_show', { 'id': course.id }) }}">{{ course.id }}</a></td>
+                <td>{{ course.title }}</td>
+                <td>{{ course.description }}</td>
+                <td>{{ course.price }}</td>
+                <td>{{ course.likes }}</td>
+                <td>
+                    <ul>
+                        <li>
+                            <a href="{{ path('course_show', { 'id': course.id }) }}">show</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('course_edit', { 'id': course.id }) }}">edit</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
+    <ul>
+        <li>
+            <a href="{{ path('course_new') }}">Create a new course</a>
+        </li>
+    </ul>
 {% endblock %}
