--- a/fit4kids/app/Resources/views/movie/course_movies.html.twig
+++ b/fit4kids/app/Resources/views/movie/course_movies.html.twig
@@ -2,44 +2,29 @@
 
 {% block body %}
     <h1>Movies list</h1>
-
+    {% for movie in movies %}
     <table>
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Title</th>
                 <th>Description</th>
-                <th>Path</th>
-                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-      {#  {% for movie in movies %}
+        
             <tr>
-                <td><a href="{{ path('movie_show', { 'id': movie.id }) }}">{{ movie.id }}</a></td>
-                <td>{{ movie.title }}</td>
+                <td><a href="courseMovies" class="videoLink" data-id="{{movie.id}}">{{ movie.title }}</td>
                 <td>{{ movie.description }}</td>
-                <td>{{ movie.path }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('movie_show', { 'id': movie.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('movie_edit', { 'id': movie.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
             </tr>
-        {% endfor %}#}
+        
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('movie_new') }}">Create a new movie</a>
-        </li>
-    </ul>
+    {% endfor %}
+    <div id="videoDiv">
+        <video width="320" height="240" controls>
+            <source id="video" src="" type="video/mp4">
+        </video>
+    </div>
 {% endblock %}
 
 {%block javascripts %}
