--- a/fit4kids/app/Resources/views/default/index.html.twig
+++ b/fit4kids/app/Resources/views/default/index.html.twig
@@ -72,4 +72,41 @@
         sollicitudin mi, in tincidunt arcu hendrerit sed. Mauris maximus quam ex, nec mattis nunc mollis eu. Nulla
         pellentesque vestibulum ullamcorper. Aliquam ac luctus ante. Nulla at tempor turpis.
     </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et aliquet odio. Donec lobortis justo sit
+        amet sollicitudin convallis. Nulla dictum lacus id gravida ultrices. Integer interdum tortor ac nisi facilisis,
+        vitae pulvinar odio facilisis. Donec in dictum nibh. Aliquam non efficitur massa. Sed tristique arcu odio, quis
+        tempus nunc sodales vel. Sed egestas diam non eros tincidunt, sed luctus tellus lobortis. Duis porta finibus
+        porttitor.
+    </p>
+    <p>
+        Duis neque mauris, lobortis non gravida id, egestas vitae massa. Praesent vitae bibendum turpis. Vivamus
+        sagittis dapibus commodo. Donec sagittis augue urna, vel vehicula lacus volutpat vitae. Curabitur vel molestie
+        ante. Proin diam dui, posuere sit amet dolor eget, porttitor tincidunt est. Duis nec nisl blandit, consequat
+        nulla sed, mattis purus. Aenean tristique libero sed massa accumsan, vel blandit augue faucibus. Mauris cursus
+        arcu id imperdiet consectetur. Nulla aliquam, urna vel egestas condimentum, eros libero pretium quam, ac
+        tristique magna tellus at risus. Nullam hendrerit vehicula vulputate. Nam fermentum ipsum odio, mollis placerat
+        massa cursus non. Quisque finibus diam ipsum, vel mattis turpis gravida condimentum. Aliquam eget placerat nibh.
+        Morbi laoreet leo id tincidunt venenatis.
+    </p>
+    <p>
+        Aenean accumsan ex massa, ac cursus libero commodo nec. Phasellus at massa eu elit egestas auctor. Proin mollis
+        tortor pharetra ullamcorper pretium. Cras vel felis quis ante pharetra ultricies eget quis quam. Morbi finibus
+        at neque eget consectetur. Sed fermentum orci vitae tempor aliquam. Curabitur eu velit purus. Praesent aliquam
+        tincidunt libero, consequat cursus purus rutrum a.
+    </p>
+    <p>
+        Duis vel quam sed est rhoncus ultrices sed quis orci. Mauris eget velit in lectus volutpat pulvinar. Quisque
+        ultrices, nisi et tempus placerat, elit sapien luctus justo, ut convallis tellus dolor quis ante. Nullam
+        convallis diam purus, ut varius libero mattis quis. Fusce convallis pulvinar ultricies. Donec molestie, nisi at
+        tempus mollis, elit odio convallis arcu, et rhoncus libero nisl lobortis arcu. Nam pharetra efficitur erat, ac
+        ultrices sapien blandit id. Mauris vitae bibendum felis.
+    </p>
+    <p>
+        Integer mollis lacus id lacinia faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada
+        fames ac turpis egestas. Nulla elementum erat eget sem ornare semper. Sed nec purus porttitor, molestie est ac,
+        tempor sem. Phasellus finibus efficitur luctus. Vestibulum blandit pulvinar ante nec vestibulum. Nulla elementum
+        sollicitudin mi, in tincidunt arcu hendrerit sed. Mauris maximus quam ex, nec mattis nunc mollis eu. Nulla
+        pellentesque vestibulum ullamcorper. Aliquam ac luctus ante. Nulla at tempor turpis.
+    </p>
 {% endblock %}
