--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_carousel.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_carousel.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <a class="btn btn-success" href="/admin/carousel/add">Dodaj nowy element slidera</a>
-    <table class="table-bordered table-hover text-center">
+    <table class="table table-bordered table-hover text-center">
         <tr>
             <th>
                 Nazwa
