--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_course.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_course.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     <a class="btn btn-success" href="/admin/course/add">Dodaj nowy kurs</a>
-    <table class="table-bordered table-hover text-center">
+    <table class="table table-bordered table-hover text-center">
         <tr>
             <th>
                 Nazwa
