--- a/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -10,16 +10,16 @@
         </div>
 
         <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#home">Edytuj dane</a></li>
+            <li class="active"><a data-toggle="tab" href="#home">Koszyk</a></li>
             <li><a data-toggle="tab" href="#menu1">Zmień hasło</a></li>
-            <li><a data-toggle="tab" href="#menu2">Koszyk</a></li>
+            <li><a data-toggle="tab" href="#menu2">Edytuj dane</a></li>
             <li><a data-toggle="tab" href="#menu3">Dodaj punkty</a></li>
         </ul>
 
         <div class="tab-content" style="margin-top: 10px">
             <div id="home" class="tab-pane fade in active" style="margin-top: 10px;">
                 {{ render(controller(
-                'FOSUserBundle:Profile:edit'
+                'AppBundle:Basket:show'
                 )) }}
             </div>
             <div id="menu1" class="tab-pane fade">
@@ -29,7 +29,7 @@
             </div>
             <div id="menu2" class="tab-pane fade">
                 {{ render(controller(
-                'AppBundle:Basket:show'
+                'FOSUserBundle:Profile:edit'
                 )) }}
             </div>
             <div id="menu3" class="tab-pane fade">
