--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -26,41 +26,42 @@
                     <a class="navbar-brand" href="/">Nazwa firmy</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/course/">Kursy</a></li>
-                        {% if not app.user %}
-                            <li><p class="navbar-text">Masz już konto?</p></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Zaloguj się</b> <span
-                                            class="caret"></span></a>
-                                <ul id="login-dp" class="dropdown-menu">
-                                    <li>
-                                        <div class="row">
-                                            <div class="col-md-12">
-                                                {{ render(controller(
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/course/">Kursy</a></li>
+                            {% if not app.user %}
+                                <li><p class="navbar-text">Masz już konto?</p></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Zaloguj się</b> <span
+                                                class="caret"></span></a>
+                                    <ul id="login-dp" class="dropdown-menu">
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    {{ render(controller(
                                                     'FOSUserBundle:Security:login'
-                                                )) }}
+                                                    )) }}
+                                                </div>
+                                                <div class="bottom text-center">
+                                                    Nie masz jeszcze konta? <a href="/register"><b>Zarejestruj
+                                                            się</b></a>
+                                                </div>
                                             </div>
-                                            <div class="bottom text-center">
-                                                Nie masz jeszcze konta? <a href="/register"><b>Zarejestruj się</b></a>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </li>
-                        {% endif %}
-                        {% if app.user %}
-                            <li><a href="/profile">Twoje konto</a></li>
-                            <li><a href="/logout">Wyloguj się</a></li>
-                        {% endif %}
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <li><a href="/admin">Panel administratora</a></li>
-                        {% endif %}
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+                                        </li>
+                                    </ul>
+                                </li>
+                            {% endif %}
+                            {% if app.user %}
+                                <li><a href="/profile">Twoje konto</a></li>
+                                <li><a href="/logout">Wyloguj się</a></li>
+                            {% endif %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li><a href="/admin">Panel administratora</a></li>
+                            {% endif %}
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
         </nav>
     {% endblock %}
 </div>
@@ -70,7 +71,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
 {% block javascripts %}{% endblock %}
-<footer class="container-fluid text-center bg-lightgray">
+<footer class="footer container-fluid text-center bg-lightgray">
 
     <div class="copyrights" style="margin-top:25px;">
         <p>Nazwa firmy © 2017, All Rights Reserved
