--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_movie.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_movie.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     <a class="btn btn-success" href="/admin/movie/add">Dodaj nowy film do kursu</a>
-    <table class="table-bordered table-hover text-center">
+    <table class="table table-bordered table-hover text-center">
         <tr>
             <th>
                 Nazwa
