--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_panel.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_panel.html.twig
@@ -10,7 +10,7 @@
             <li><a data-toggle="tab" href="#movie">Filmy</a></li>
         </ul>
 
-        <div class="tab-content" style="margin-top: 10px">
+        <div class="table tab-content" style="margin-top:10px">
             <div id="carousel" class="tab-pane fade in active" style="margin-top: 10px;">
                 {{ render(controller(
                 'AppBundle:Admin:showAdminCarousel'
