--- a/fit4kids/web/css/styleBase.css
+++ b/fit4kids/web/css/styleBase.css
@@ -3,21 +3,12 @@
 .blockBody {
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 100px;
 }
 
 .bg-lightgray
 {
     background-color:LightGray;
-}
-
-footer {
-    clear: both;
-    position: relative;
-    z-index: 10;
-    margin-top: 1em;
-    right: 0;
-    bottom: 0;
-    left: 0;
 }
 
 #login-dp{
@@ -69,4 +60,53 @@ footer {
         background-color: inherit;
         border-top:0 none;
     }
+}
+
+/**
+ * Demo Styles
+ */
+
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+.demo {
+    margin: 0 auto;
+    padding-top: 64px;
+    max-width: 640px;
+    width: 94%;
+}
+
+.demo h1 {
+    margin-top: 0;
+}
+
+/**
+ * Footer Styles
+ */
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+    margin-top: 20px;
 }
