--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_course.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_course.html.twig
@@ -53,7 +53,7 @@
                 </td>
                 <td>
                     {%for basket in course.baskets%}
-                        {{basket.id}} <br>
+                        {{basket.user.username}} <br>
                     {%endfor%}
                 </td>
                 <td>
