--- a/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -14,7 +14,7 @@
             <li><a data-toggle="tab" href="#menu1">Zmień hasło</a></li>
             <li><a data-toggle="tab" href="#menu2">Edytuj dane</a></li>
             <li><a data-toggle="tab" href="#menu3">Dodaj punkty</a></li>
-            <li><a data-toggle="tab" href="#menu4">Twoje Filmy</a></li>
+            <li><a data-toggle="tab" href="#menu4">Twoje Kursy</a></li>
         </ul>
 
         <div class="tab-content" style="margin-top: 10px">
