payAll & delete options for basket, movie ratings, added get avgRating method in movie entity

--- a/fit4kids/app/Resources/views/basket/deleteSuccess.html.twig
+++ b/fit4kids/app/Resources/views/basket/deleteSuccess.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
     <div class="alert alert-success">
-        Pomyślnie dodano do koszyka <a href="/profile#menu2">Przejdź do koszyka</a>
+        Usunięto z koszyka || <a href="/profile#menu2">Przejdż do koszyka</a>
     </div>
 {% endblock %}
