--- a/fit4kids/app/Resources/views/basket/addedToBasket.html.twig
+++ b/fit4kids/app/Resources/views/basket/addedToBasket.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
     <div class="alert alert-success">
-        Pomyślnie zakupiono kursy 
+        Pomyślnie dodano do koszyka <a href="/profile#menu2">Przejdź do koszyka</a> || <a href="/course">Wróć do kursów</a>
     </div>
 {% endblock %}
