--- a/fit4kids/app/Resources/views/basket/deleteFail.html.twig
+++ b/fit4kids/app/Resources/views/basket/deleteFail.html.twig
@@ -3,7 +3,7 @@
 {% block title %}AppBundle:Points:addPoints{% endblock %}
 
 {% block body %}
-    <div class="alert alert-success">
-        Pomyślnie zakupiono kursy 
+    <div class="alert alert-danger">
+        W koszyku nie ma takiego kursu <a href="/profile#menu2">Przejdź do koszyka</a>
     </div>
 {% endblock %}
