--- a/fit4kids/app/Resources/views/default/index.html.twig
+++ b/fit4kids/app/Resources/views/default/index.html.twig
@@ -5,35 +5,36 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            {%for key, carousel in carousels%}
-                <li  class="{% if loop.first %}active{% endif %}" data-target="#myCarousel" data-slide-to="{{key}}"></li>
-            {%endfor%}
+            {% for key, carousel in carousels %}
+                <li class="{% if loop.first %}active{% endif %}" data-target="#myCarousel"
+                    data-slide-to="{{ key }}"></li>
+            {% endfor %}
         </ol>
 
         <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            {%for carousel in carousels%}
+        <div class="carousel-inner" style="height: 400px">
+            {% for carousel in carousels %}
 
-                <div class="item{%if loop.first %} active{%endif%}">
-                    <a href="/course/{{carousel.course.id}}">
-                        <img src="{{carousel.picture}}" alt="image">
+                <div class="item{% if loop.first %} active{% endif %}" style="">
+                    <a href="/course/{{ carousel.course.id }}">
+                        <img src="{{ carousel.picture }}" alt="image">
                     </a>
                 </div>
 
-            {%endfor%}
+            {% endfor %}
         </div>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    
+
     <h1>Witam na stronie</h1>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et aliquet odio. Donec lobortis justo sit
