poprawione, bo wykrzaczyłem

--- a/fit4kids/app/Resources/views/course/buy_database_error.html.twig
+++ b/fit4kids/app/Resources/views/course/buy_database_error.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
     <div class="alert alert-danger">
-        Już posiadasz ten kurs. Nie możesz go zakupić drugi raz.
+        Już posiadasz któryś z kursów. Nie możesz go zakupić drugi raz.
     </div>
 {% endblock %}
