--- a/fit4kids/app/Resources/views/movie/course_movies.html.twig
+++ b/fit4kids/app/Resources/views/movie/course_movies.html.twig
@@ -36,8 +36,7 @@
     <hr>
     {% endfor %}
     <div id="videoDiv">
-        <video width="320" height="240" controls>
-            <source id="video" src="" type="video/mp4"/>
+        <video id="video" src="" width="320" height="240" controls>
         </video>
     </div>
 {% endblock %}
