--- a/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -9,13 +9,16 @@
         <div style="margin-top: 10px">
         </div>
 
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#home">Koszyk</a></li>
-            <li><a data-toggle="tab" href="#menu1">Zmień hasło</a></li>
-            <li><a data-toggle="tab" href="#menu2">Edytuj dane</a></li>
-            <li><a data-toggle="tab" href="#menu3">Dodaj punkty</a></li>
-            <li><a data-toggle="tab" href="#menu4">Twoje Kursy</a></li>
-        </ul>
+        <div style="margin-bottom: 30px">
+            <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#home">Koszyk</a></li>
+                <li><a data-toggle="tab" href="#menu1">Zmień hasło</a></li>
+                <li><a data-toggle="tab" href="#menu2">Edytuj dane</a></li>
+                <li><a data-toggle="tab" href="#menu3">Dodaj punkty</a></li>
+                <li><a data-toggle="tab" href="#menu4">Twoje Kursy</a></li>
+            </ul>
+        </div>
+
 
         <div class="tab-content" style="margin-top: 10px">
             <div id="home" class="tab-pane fade in active" style="margin-top: 10px;">
