--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_carousel.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_carousel.html.twig
@@ -1,7 +1,9 @@
 
 
 {% block body %}
+    <div style="margin-top:20px; margin-bottom: 20px">
     <a class="btn btn-success" href="/admin/carousel/add">Dodaj nowy element slidera</a>
+    </div>
     <table class="table table-bordered table-hover text-center">
         <tr>
             <th>
