--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_course.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_course.html.twig
@@ -1,5 +1,7 @@
 {% block body %}
+<div style="margin-top:20px; margin-bottom: 20px">
     <a class="btn btn-success" href="/admin/course/add">Dodaj nowy kurs</a>
+</div>
     <table class="table table-bordered table-hover text-center">
         <tr>
             <th>
