--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_user.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_user.html.twig
@@ -1,4 +1,6 @@
 {% block body %}
+    <div style="margin-top: 40px">
+    </div>
     <table class="table table-bordered table-hover text-center">
         <tr>
             <th>
