--- a/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -3,10 +3,14 @@
 
 {% block body %}
     <div class="fos_user_user_show">
+        <h3 style="margin-bottom: 20px; margin-top:30px;">Informacje o użytkowniku: </h3>
         <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
         <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
         <p>Stan punktów: {{ user.points }}</p>
         <div style="margin-top: 10px">
+        </div>
+
+        <div style="margin-bottom: 30px;">
         </div>
 
         <div style="margin-bottom: 30px">
