--- a/fit4kids/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/fit4kids/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -8,6 +8,7 @@
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
+                <h3 style="margin-bottom: 30px">Zarejestruj się:</h3>
                 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
                 {{ form_widget(form) }}
                     <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-success"/>
