--- a/fit4kids/app/Resources/views/base.html.twig
+++ b/fit4kids/app/Resources/views/base.html.twig
@@ -30,7 +30,9 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
+                            {% if app.user %}
                             <li><a href="/course/">Kursy</a></li>
+                            {% endif %}
                             {% if not app.user %}
                                 <li><p class="navbar-text">Masz już konto?</p></li>
                                 <li class="dropdown">
