--- a/fit4kids/app/Resources/views/course/index.html.twig
+++ b/fit4kids/app/Resources/views/course/index.html.twig
@@ -6,7 +6,7 @@
             <div class="col-md-2">
             </div>
             <div class="col-md-8">
-                <h1>Lista Kursów</h1>
+                <h3 style="margin-bottom:30px;">Lista Kursów: </h3>
 
                 <table class="table table-bordered">
                     <thead>
@@ -24,13 +24,13 @@
                             <td>{{ course.description }}</td>
                             <td>{{ course.price }}</td>
                             <td>{{ course.likes }}</td>
-                            <td> 
-                                   {%if course.addedByLoggedUser == 'true'%}
-                                        <a class="btn btn-info disabled" href="#">Zakupiony</a>
-                                   {%endif%}
-                                   {%if course.addedByLoggedUser == 'false'%}
-                                        <a class="btn btn-default" href="addToBasket/{{ course.id }}">Dodaj do koszyka</a>
-                                   {%endif%}
+                            <td>
+                                {% if course.addedByLoggedUser == 'true' %}
+                                    <a class="btn btn-info disabled" href="#">Zakupiony</a>
+                                {% endif %}
+                                {% if course.addedByLoggedUser == 'false' %}
+                                    <a class="btn btn-default" href="addToBasket/{{ course.id }}">Dodaj do koszyka</a>
+                                {% endif %}
                             </td>
                         </tr>
                     {% endfor %}
