--- a/fit4kids/app/Resources/views/course/my_courses.html.twig
+++ b/fit4kids/app/Resources/views/course/my_courses.html.twig
@@ -1,35 +1,41 @@
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-8">
-                <table class="table table-bordered">
-                    <thead>
-                    <tr>
-                        <th>Tytuł</th>
-                        <th>Opis</th>
-                        <th>Likes</th>
-                        
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for course in courses %}
+
+    {% if courses is not empty%}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-6">
+                    <table class="table">
+                        <thead>
                         <tr>
-                            <td>{{ course.title }}</td>
-                            <td>{{ course.description }}</td>
-                            <td>{{ course.likes }}</td>
-                            <td>
-                                <a class="btn btn-default" href="{{ path('course_movies', { 'id': course.id }) }}">przejdż do filmów</a>
-                            </td>
+                            <th>Tytuł</th>
+                            <th>Opis</th>
+
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-2">
+                        </thead>
+                        <tbody>
+                        {% for course in courses %}
+                            <tr>
+                                <td>{{ course.title }}</td>
+                                <td>{{ course.description }}</td>
+                                <td scope="col">
+                                    <a class="btn btn-default" href="{{ path('course_movies', { 'id': course.id }) }}">przejdż
+                                        do filmów</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-3">
+                </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        <div class="alert alert-info">
+            Nie masz jeszcze żadnych zakupionych kursów || <a href="/course">Przejdź do kursów</a>
+        </div>
+    {% endif %}
 
 {% endblock %}
