--- a/fit4kids/app/Resources/views/course/index.html.twig
+++ b/fit4kids/app/Resources/views/course/index.html.twig
@@ -11,10 +11,10 @@
                 <table class="table table-bordered">
                     <thead>
                     <tr>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Price</th>
-                        <th>Likes</th>
+                        <th>Nazwa kursu</th>
+                        <th>Opis</th>
+                        <th>Cena</th>
+                        <th>Polubienia</th>
                     </tr>
                     </thead>
                     <tbody>
