--- a/fit4kids/app/Resources/views/course/my_courses.html.twig
+++ b/fit4kids/app/Resources/views/course/my_courses.html.twig
@@ -9,7 +9,7 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th>Tytuł</th>
+                            <th>Nazwa kursu</th>
                             <th>Opis</th>
 
                         </tr>
