--- a/fit4kids/web/css/styleBase.css
+++ b/fit4kids/web/css/styleBase.css
@@ -84,6 +84,7 @@ body {
     padding-bottom: 6rem;
     min-height: 100%;
     font-family: "Helvetica Neue", Arial, sans-serif;
+    background-color:lightcyan;
 }
 
 .demo {
